--- a/GeoSpatialData/GeoSpatialData.vcxproj
+++ b/GeoSpatialData/GeoSpatialData.vcxproj
@@ -58,15 +58,15 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\glfw\include;..\Opengl1\Header Files;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;..\glfw\include;..\Opengl1\Header Files;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -74,7 +74,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\glfw\include;..\Opengl1\Header Files;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;..\glfw\include;..\Opengl1\Header Files;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -85,8 +85,8 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
