--- a/GeoSpatialData/GeoSpatialData.vcxproj
+++ b/GeoSpatialData/GeoSpatialData.vcxproj
@@ -66,7 +66,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -86,7 +86,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
