--- a/ECS/ECS.vcxproj
+++ b/ECS/ECS.vcxproj
@@ -41,13 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>windows\Debug\</OutDir>
-    <IntDir>obj\Debug\</IntDir>
+    <IntDir>..\bin\Intermediate\Debug\ECS\</IntDir>
     <TargetName>ECS</TargetName>
     <TargetExt>.lib</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>windows\Release\</OutDir>
-    <IntDir>obj\Release\</IntDir>
+    <IntDir>..\bin\Intermediate\Release\ECS\</IntDir>
     <TargetName>ECS</TargetName>
     <TargetExt>.lib</TargetExt>
   </PropertyGroup>
@@ -64,9 +64,6 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <Lib>
-      <AdditionalLibraryDirectories>windows\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -85,9 +82,6 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
-    <Lib>
-      <AdditionalLibraryDirectories>windows\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="HeaderFiles\ComponentArray.h" />
