--- a/GeoSpatialData/GeoSpatialData.vcxproj
+++ b/GeoSpatialData/GeoSpatialData.vcxproj
@@ -41,15 +41,15 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>bin\</OutDir>
-    <IntDir>..\bin\intermediate\Debug\GeoSpatialData\</IntDir>
+    <OutDir>bin\Debug\</OutDir>
+    <IntDir>..\bin\Intermediate\Debug\GeoSpatialData\</IntDir>
     <TargetName>GeoSpatialData</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>bin\</OutDir>
-    <IntDir>..\bin\intermediate\Release\GeoSpatialData\</IntDir>
+    <OutDir>bin\Release\</OutDir>
+    <IntDir>..\bin\Intermediate\Release\GeoSpatialData\</IntDir>
     <TargetName>GeoSpatialData</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
@@ -58,7 +58,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;..\glfw\include;..\Opengl1\Header Files;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\glfw\include;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;..\Opengl1\Header Files;..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
     </ClCompile>
@@ -66,7 +66,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\glfw\src\Debug;..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\Opengl1\bin\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\vendor\imGui\windows\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -74,7 +74,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;..\glfw\include;..\Opengl1\Header Files;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\glfw\include;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;..\Opengl1\Header Files;..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -86,7 +86,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\glfw\src\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\bin\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\glfw\src\Release;..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\Opengl1\bin\Release;..\Opengl1\vendor\assimp\lib\Release;..\Opengl1\vendor\imGui\windows\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
