Chnaged root assets directory and defined a macro for user to customize root dir

--- a/Opengl1/opengl1.vcxproj
+++ b/Opengl1/opengl1.vcxproj
@@ -92,6 +92,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Header Files\engine_constants.h" />
     <ClInclude Include="Header Files\Behaviour.h" />
     <ClInclude Include="Header Files\BehaviourComponent.h" />
     <ClInclude Include="Header Files\Camera.h" />
