--- a/Opengl1/opengl1.vcxproj.filters
+++ b/Opengl1/opengl1.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="Header Files\temp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\engine_constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Camera.cpp">
