--- a/Planets/Planets.vcxproj
+++ b/Planets/Planets.vcxproj
@@ -58,7 +58,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\glfw\include;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;..\Opengl1\Header Files;..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Opengl1\Header Files;..\ECS\HeaderFiles;..\Opengl1\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
     </ClCompile>
@@ -66,7 +66,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mtd.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\Opengl1\vendor\assimp\lib\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\Opengl1\bin\Debug;..\glfw\src\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Opengl1\bin\Debug;..\Opengl1\vendor\imGui\windows\Debug;..\glfw\src\Debug;..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\Opengl1\vendor\assimp\lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -74,7 +74,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\glfw\include;..\Opengl1\vendor;..\Opengl1\vendor\imGui;..\Opengl1\vendor\assimp\include;..\ECS\HeaderFiles;..\Opengl1\Header Files;..\Opengl1\vendor\PhysX\physx\include;..\Opengl1\vendor\PhysX\physx\source\physxextensions\src;..\Opengl1\vendor\PhysX\pxshared\include;..\Opengl1\vendor\PhysX\physx\source\foundation\include;..\Opengl1\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Opengl1\Header Files;..\ECS\HeaderFiles;..\Opengl1\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -86,7 +86,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;imGui.lib;assimp-vc142-mt.lib;Opengl1.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\Opengl1\vendor\assimp\lib\Release;..\Opengl1\vendor\imGui\windows\Release;..\Opengl1\bin\Release;..\glfw\src\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Opengl1\bin\Release;..\Opengl1\vendor\imGui\windows\Release;..\glfw\src\Release;..\Opengl1\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\Opengl1\vendor\assimp\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
